# DecideDocker

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose-cloudcompute.yml  docker-compose-legacy.yml  docker-compose.yml  startup.sh
nnUNet/nnunet/network_architecture/: neural_network.py
nnUNet/nnunet/training/: model_restore.py
nnUNet/nnunet/training/network_training/: network_trainer.py
workspace/: default.env
workspace/decide/: pyproject.toml  tox.ini
workspace/decide/config/: config_total_segmentator.yaml  dicomdata_config.yaml
workspace/decide/src/decide/: __init__.py  paths.py
workspace/decide/src/decide/argos/: __init__.py  dicom_database.py
workspace/decide/src/decide/dcm/: __init__.py  dicom_classes.py  dicom_data.py  dicom_image.py  dicom_metadata.py  dicom_rtstruct.py  image.py  image_fixes.py  rtstruct.py
workspace/decide/src/decide/mask/: __init__.py  mask_processor.py  segmentator.py
workspace/decide/src/decide/utils/: logger.py  utils.py
workspace/decide/src/decide/validator/: __init__.py  dicom_validator.py
workspace/decide/src/decide/view/: __init__.py  render.py
workspace/decide/src/decide/xnat/: __init__.py  xnat_manager.py
workspace/notebooks/: 001_test_essentials.ipynb  002_get_nifti.ipynb  002_get_niftiv2.ipynb
workspace/scripts/: get_nifti.py  get_structures_ready.py
